--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13979,7 +13979,7 @@
                         cover: "AgACAgQAAxkBAAI39mewS5AKaNozUttDedMhI3xOcZdzAAJ7xzEb4AyBUdi6fgZXlnXYAQADAgADdwADNgQ",
                         caption: caption,
                         parse_mode: "Markdown",
-                        //protect_content: true,
+                        protect_content: true,
                     };
 
                     const response = await fetch(url, {
@@ -14006,7 +14006,7 @@
                         document: fileId,
                         caption: caption,
                         parse_mode: "Markdown",
-                        //protect_content: true,
+                        protect_content: true,
                     };
 
                     const response = await fetch(url, {
