--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14012,7 +14012,7 @@
     }
 
     // Build the caption. If any additional details exist, prepend the header.
-    let caption = `*${escapeMarkdown(label)} ${escapeMarkdown(episodeNumber)}\nالجودة: ${escapeMarkdown(resolution)}\nالحجم: ${escapeMarkdown(size)} ميجا*`;
+    let caption = `*${label} ${episodeNumber}\nالجودة: ${resolution}\nالحجم: ${size} ميجا*`;
     if (details) {
         caption += `\n\n✦✦— محتويات الحلقة —✦✦${details}`;
     }
