--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13984,37 +13984,37 @@
     // Build additional details only if provided
     let details = "";
     if (introductionTime) {
-        details += `\nالمقدمة: ${escapeMarkdown(introductionTime)}`;
+        details += `*\nالمقدمة: ${escapeMarkdown(introductionTime)}*`;
     }
     if (startStoryTime) {
-        details += `\nبداية القصة: ${escapeMarkdown(startStoryTime)}`;
+        details += `*\n\nبداية القصة: ${escapeMarkdown(startStoryTime)}*`;
     }
     if (episodeSuspenseTime) {
-        details += `\nتشويق الحلقة: ${escapeMarkdown(episodeSuspenseTime)}`;
+        details += `*\n\nتشويق الحلقة: ${escapeMarkdown(episodeSuspenseTime)}*`;
     }
     if (startSongTime) {
-        details += `\nأغنية البداية: ${escapeMarkdown(startSongTime)}`;
+        details += `*\n\nأغنية البداية: ${escapeMarkdown(startSongTime)}*`;
     }
     if (chapterOneTime) {
-        details += `\nالفصل الأول: ${escapeMarkdown(chapterOneTime)}`;
+        details += `*\n\nالفصل الأول: ${escapeMarkdown(chapterOneTime)}*`;
     }
     if (chapterTwoTime) {
-        details += `\nالفصل الثاني: ${escapeMarkdown(chapterTwoTime)}`;
+        details += `*\n\nالفصل الثاني: ${escapeMarkdown(chapterTwoTime)}*`;
     }
     if (endSongTime) {
-        details += `\nأغنية النهاية: ${escapeMarkdown(endSongTime)}`;
+        details += `*\n\nأغنية النهاية: ${escapeMarkdown(endSongTime)}*`;
     }
     if (nextEpisodeTeaserTime) {
-        details += `\nتشويق الحلقة القادمة: ${escapeMarkdown(nextEpisodeTeaserTime)}`;
+        details += `*\n\nتشويق الحلقة القادمة: ${escapeMarkdown(nextEpisodeTeaserTime)}*`;
     }
     if (nextEpisodeHintTime) {
-        details += `\nتلميح الحلقة القادمة: ${escapeMarkdown(nextEpisodeHintTime)}`;
+        details += `*\n\nتلميح الحلقة القادمة: ${escapeMarkdown(nextEpisodeHintTime)}*`;
     }
 
     // Build the caption. If any additional details exist, prepend the header.
     let caption = `*${label} ${episodeNumber}\nالجودة: ${resolution}\nالحجم: ${size} ميجا*`;
     if (details) {
-        caption += `\n\n✦✦— محتويات الحلقة —✦✦${details}`;
+        caption += `*\n\n✦✦— محتويات الحلقة —✦✦${details}*`;
     }
 
     // Set the status to 'sending'
