--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13984,7 +13984,7 @@
     // Build additional details only if provided
     let details = "";
     if (introductionTime) {
-        details += `*\nالمقدمة: ${escapeMarkdown(introductionTime)}*`;
+        details += `*\n\nالمقدمة: ${escapeMarkdown(introductionTime)}*`;
     }
     if (startStoryTime) {
         details += `*\n\nبداية القصة: ${escapeMarkdown(startStoryTime)}*`;
@@ -13996,7 +13996,7 @@
         details += `*\n\nأغنية البداية: ${escapeMarkdown(startSongTime)}*`;
     }
     if (chapterOneTime) {
-        details += `*\n\nالفصل الأول: ${escapeMarkdown(chapterOneTime)}*`;
+        details += `*\n\nالفصل الأول:* ${escapeMarkdown(chapterOneTime)}`;
     }
     if (chapterTwoTime) {
         details += `*\n\nالفصل الثاني: ${escapeMarkdown(chapterTwoTime)}*`;
