--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13999,7 +13999,7 @@
         details += `*\n\nالفصل الأول:* ${escapeMarkdown(chapterOneTime)}`;
     }
     if (chapterTwoTime) {
-        details += `*\n\nالفصل الثاني: ${escapeMarkdown(chapterTwoTime)}*`;
+        details += `\n\nالفصل الثاني: *${escapeMarkdown(chapterTwoTime)}*`;
     }
     if (endSongTime) {
         details += `*\n\nأغنية النهاية: ${escapeMarkdown(endSongTime)}*`;
