--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13984,7 +13984,7 @@
     // Build additional details only if provided
     let details = "";
     if (introductionTime) {
-        details += `*\n\nالمقدمة: *${escapeMarkdown(introductionTime)}*`;
+        details += `\n\nالمقدمة: *${escapeMarkdown(introductionTime)}*`;
     }
     if (startStoryTime) {
         details += `*\n\nبداية القصة: *${escapeMarkdown(startStoryTime)}*`;
