--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13980,7 +13980,7 @@
                             .replace(/[_*[\]()~`>#+\-=|{}.!]/g, '\\$&')
                             .replace(/\n/g, '\\n');
                     }
-
+                    
                     // Build additional details only if provided
                     let details = "";
                     if (introductionTime) {
@@ -14010,6 +14010,9 @@
                     if (nextEpisodeHintTime) {
                         details += `\n\n*تلميح الحلقة القادمة:* ${escapeMarkdown(nextEpisodeHintTime)}`;
                     }
+
+                    // Build the caption. If any additional details exist, prepend the header.
+                    let caption = `*${label} ${episodeNumber}\nالجودة: ${resolution}\nالحجم: ${size} ميجا*`;
 
                     // Append the bold header for the details and then the details content
                     if (details) {
