--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13984,31 +13984,31 @@
                     // Build additional details only if provided
                     let details = "";
                     if (introductionTime) {
-                        details += `\n\n*المقدمة:* ${escapeMarkdown(introductionTime)}`;
+                        details += `\n*المقدمة:* ${escapeMarkdown(introductionTime)}`;
                     }
                     if (startStoryTime) {
-                        details += `\n\n*بداية القصة:* ${escapeMarkdown(startStoryTime)}`;
+                        details += `\n*بداية القصة:* ${escapeMarkdown(startStoryTime)}`;
                     }
                     if (episodeSuspenseTime) {
-                        details += `\n\n*تشويق الحلقة:* ${escapeMarkdown(episodeSuspenseTime)}`;
+                        details += `\n*تشويق الحلقة:* ${escapeMarkdown(episodeSuspenseTime)}`;
                     }
                     if (startSongTime) {
-                        details += `\n\n*أغنية البداية:* ${escapeMarkdown(startSongTime)}`;
+                        details += `\n*أغنية البداية:* ${escapeMarkdown(startSongTime)}`;
                     }
                     if (chapterOneTime) {
-                        details += `\n\n*الفصل الأول:* ${escapeMarkdown(chapterOneTime)}`;
+                        details += `\n*الفصل الأول:* ${escapeMarkdown(chapterOneTime)}`;
                     }
                     if (chapterTwoTime) {
-                        details += `\n\n*الفصل الثاني:* ${escapeMarkdown(chapterTwoTime)}`;
+                        details += `\n*الفصل الثاني:* ${escapeMarkdown(chapterTwoTime)}`;
                     }
                     if (endSongTime) {
-                        details += `\n\n*أغنية النهاية:* ${escapeMarkdown(endSongTime)}`;
+                        details += `\n*أغنية النهاية:* ${escapeMarkdown(endSongTime)}`;
                     }
                     if (nextEpisodeTeaserTime) {
-                        details += `\n\n*تشويق الحلقة القادمة:* ${escapeMarkdown(nextEpisodeTeaserTime)}`;
+                        details += `\n*تشويق الحلقة القادمة:* ${escapeMarkdown(nextEpisodeTeaserTime)}`;
                     }
                     if (nextEpisodeHintTime) {
-                        details += `\n\n*تلميح الحلقة القادمة:* ${escapeMarkdown(nextEpisodeHintTime)}`;
+                        details += `\n*تلميح الحلقة القادمة:* ${escapeMarkdown(nextEpisodeHintTime)}`;
                     }
 
                     // Build the caption. If any additional details exist, prepend the header.
