--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -14409,7 +14409,7 @@
             async created() {
 
                 // Add rotation animation and progress bar only when `loading && userJoined`
-                if (this.loading && this.userJoined) {
+                if (this.loading && !this.userJoined) {
                     document.body.innerHTML = `
                         <style>
                             @keyframes rotateAnimation {
