--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -4890,7 +4890,7 @@
 
                                 <!-- Tooltip for OVA -->
                                 <div class="tooltip-container flex items-center gap-2">
-                                    <span class="w-6 h-6 bbg-cyan-500 rounded-full"></span>
+                                    <span class="w-6 h-6 bg-cyan-500 rounded-full"></span>
                                     <span>خاصة بالفيلم</span>
                                     <span class="tooltip-text">
                                         هي حلقات قصيرة تُعرف باسم «حلقات الأفلام الخاصة» أو «الملف السحري»، وتصل مدة عرضها إلى نحو 25 دقيقة.
