--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -12507,17 +12507,17 @@
                 getBackgroundColor(episode) {
                     if ((this.selectedFilter === 'all' || this.selectedFilter === 'anime') && this.episodeTypeFilter === 'All') {
                         // Check for special cases first
-                        if (episode.EpisodeNumber.includes("الفيلم")) {
+                        if (episode.EpisodeNumber === "الفيلم") {
                             return 'bg-amber-800';
                         } else if (episode.EpisodeSpecial === '1') {
                             return 'bg-sky-800';
                         } else if (episode.EpisodeSpecial === '2') {
                             return 'bg-orange-600';
-                        } else if (episode.EpisodeNumber.includes("قصة قصيرة")) {
+                        } else if (episode.EpisodeNumber === "قصة قصيرة") {
                             return 'bg-green-600';
-                        } else if (episode.EpisodeNumber.includes("أوفا")) {
+                        } else if (episode.EpisodeNumber === "أوفا") {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم")) {
+                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
                             return 'bg-cyan-500';
                         }
 
@@ -12529,17 +12529,17 @@
                         }
                     } else if (this.selectedFilter === 'all' && (this.episodeTypeFilter === 'Manga' || this.episodeTypeFilter === 'Filler')) {
                         // Check for special cases first
-                        if (episode.EpisodeNumber.includes("الفيلم")) {
+                        if (episode.EpisodeNumber === "الفيلم") {
                             return 'bg-amber-800';
                         } else if (episode.EpisodeSpecial === '1') {
                             return 'bg-sky-800';
                         } else if (episode.EpisodeSpecial === '2') {
                             return 'bg-orange-600';
-                        } else if (episode.EpisodeNumber.includes("قصة قصيرة")) {
+                        } else if (episode.EpisodeNumber === "قصة قصيرة") {
                             return 'bg-green-600';
-                        } else if (episode.EpisodeNumber.includes("أوفا")) {
+                        } else if (episode.EpisodeNumber === "أوفا") {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم")) {
+                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
                             return 'bg-cyan-500';
                         }
 
