--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -12517,7 +12517,7 @@
                             return 'bg-green-600';
                         } else if (episode.EpisodeNumber.includes("أوفا")) {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم")) {
+                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
                             return 'bg-cyan-500';
                         }
 
@@ -12539,7 +12539,7 @@
                             return 'bg-green-600';
                         } else if (episode.EpisodeNumber.includes("أوفا")) {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم")) {
+                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
                             return 'bg-cyan-500';
                         }
 
