--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -12507,7 +12507,7 @@
                 getBackgroundColor(episode) {
                     if ((this.selectedFilter === 'all' || this.selectedFilter === 'anime') && this.episodeTypeFilter === 'All') {
                         // Check for special cases first
-                        if (episode.EpisodeNumber === 'الفيلم') {
+                        if (episode.EpisodeNumber.includes("الفيلم") && !episode.EpisodeNumber.includes("خاصة بالفيلم")) {
                             return 'bg-amber-800';
                         } else if (episode.EpisodeSpecial === '1') {
                             return 'bg-sky-800';
@@ -12517,7 +12517,7 @@
                             return 'bg-green-600';
                         } else if (episode.EpisodeNumber.includes("أوفا")) {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
+                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم") && !episode.EpisodeNumber.includes("الفيلم")) {
                             return 'bg-cyan-500';
                         }
 
@@ -12529,7 +12529,7 @@
                         }
                     } else if (this.selectedFilter === 'all' && (this.episodeTypeFilter === 'Manga' || this.episodeTypeFilter === 'Filler')) {
                         // Check for special cases first
-                        if (episode.EpisodeNumber === 'الفيلم') {
+                        if (episode.EpisodeNumber.includes("الفيلم") && !episode.EpisodeNumber.includes("خاصة بالفيلم")) {
                             return 'bg-amber-800';
                         } else if (episode.EpisodeSpecial === '1') {
                             return 'bg-sky-800';
@@ -12539,7 +12539,7 @@
                             return 'bg-green-600';
                         } else if (episode.EpisodeNumber.includes("أوفا")) {
                             return 'bg-yellow-600';
-                        } else if (episode.EpisodeNumber === "خاصة بالفيلم") {
+                        } else if (episode.EpisodeNumber.includes("خاصة بالفيلم")  && !episode.EpisodeNumber.includes("الفيلم")) {
                             return 'bg-cyan-500';
                         }
 
